Project

General

Profile

Actions

Bug #16321

closed

Renaming old format image results in "Transport endpoint is not connected" error

Added by Mykola Golub almost 8 years ago. Updated over 7 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

When renaming an old format image it succeeds but the error "image watch failed: 139669316596288, (107) Transport endpoint is not connected" is logged.

% rbd create --image-format 1 --size 1M foo 
rbd: image format 1 is deprecated
% rbd rename foo bar                       
2016-06-14 12:03:00.213077 7f0766ffd700 -1 librbd::ImageWatcher: 0x7f074c004ce0 image watch failed: 139669316596288, (107) Transport endpoint is not connected


Related issues 1 (0 open1 closed)

Copied to rbd - Backport #16796: jewel: Renaming old format image results in "Transport endpoint is not connected" errorResolvedLoïc DacharyActions
Actions #1

Updated by Mykola Golub almost 8 years ago

  • Status changed from In Progress to Fix Under Review
Actions #2

Updated by Mykola Golub almost 8 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Nathan Cutler almost 8 years ago

  • Copied to Backport #16796: jewel: Renaming old format image results in "Transport endpoint is not connected" error added
Actions #4

Updated by Loïc Dachary over 7 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF